@@ -14,6 +14,9 @@ small - this just lets others know that the file has changed if nothing
 else.  With this, include the file(s) that you changed.
 ------------------------------------------------------------------------------
 
+Do not run EVENT_DESTROY plugin events for merged objects.
+Andreas Kirschbaum 2010-03-08
+
 Properly free inventory of merged objects.
 Andreas Kirschbaum 2010-03-08
 
